# py-fits-preview

./: AGENTS.md  LICENSE  NOTES.md  README.md  build.sh  compute_backend.py  fits-preview.spec  install_linux.sh  install_mac.sh  install_windows.bat  main.py  pyproject.toml
tests/: test_headless.py
