[project]
name = "py-fits-preview"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "astropy>=7.2.0",
    "pyside6>=6.11.0",
    "scipy>=1.17.1",
]

[project.scripts]
fits-preview = "main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
