[project]
name = "py-fits-preview"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "astropy~=7.2.0",
    "numba~=0.65.0",
    "numpy~=2.4.0",
    "opencv-python-headless~=4.13.0",
    "pyside6~=6.11.0",
    "scipy~=1.17.0",
]

[project.scripts]
fits-preview = "main:main"

[dependency-groups]
dev = [
    "pyinstaller~=6.20.0",
    "pytest~=9.0.0",
]
